--- a/FrontEnd/style/style.css
+++ b/FrontEnd/style/style.css
@@ -28,17 +28,17 @@ h1 {
     max-width: 600px;
 }
 
-.customer-form .form-group {
+.blog-form .form-group {
     margin-bottom: 15px;
 }
 
-.customer-form label {
+.blog-form label {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
 }
 
-.customer-form input {
+.blog-form input {
     width: 100%;
     padding: 8px;
     border: 1px solid #ccc;
@@ -75,19 +75,19 @@ h1 {
     background-color: #8e44ad;
 }
 
-.customer-table {
+.blog-table {
     width: 100%;
     margin-top: 20px;
     border-collapse: collapse;
 }
 
-.customer-table th, .customer-table td {
+.blog-table th, .customer-table td {
     padding: 10px;
     text-align: center;
     border-bottom: 1px solid #ddd;
 }
 
-.customer-table th {
+.blog-table th {
     background-color: #2c3e50;
     color: white;
 }
