Blog get-all function successful implement using ajax.

--- a/FrontEnd/style/style.css
+++ b/FrontEnd/style/style.css
@@ -92,6 +92,10 @@ h1 {
     color: white;
 }
 
+.blog-table tr{
+    text-align: center;
+}
+
 @media (max-width: 600px) {
     .form-buttons {
         flex-direction: column;
