Blog id modified & bugs fixed.

--- a/FrontEnd/style/style.css
+++ b/FrontEnd/style/style.css
@@ -38,7 +38,7 @@ h1 {
     font-weight: bold;
 }
 
-.blog-form input {
+.blog-form input,select{
     width: 100%;
     padding: 8px;
     border: 1px solid #ccc;
